app/src/db/repositories/schwirigkeit_liste/snapshots/anki_sentences__db__repositories__schwirigkeit_liste__schwirigkeit_liste_test__test_schwirigkeit_liste_repo__bulk_insert__run_bulk_insert_update_scenario-3.snap
---
source: app/src/db/repositories/schwirigkeit_liste/schwirigkeit_liste_test.rs
expression: res_2
---
[
    Snapshot {
        id: 1,
        schwirigkeit: "einfag",
        created_at: "<created_at>",
        deleted_at: "<deleted_at>",
    },
    Snapshot {
        id: 2,
        schwirigkeit: "schwirig",
        created_at: "<created_at>",
        deleted_at: "<deleted_at>",
    },
]
